--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
         "build": "rollup -c",
         "start": "rollup -c --watch",
         "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "build-storybook": "build-storybook",
+        "test": "jest",
+        "test:watch": "jest --watch"
     },
     "author": "Yunis Huseynzade",
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.17.5",
+        "@babel/plugin-syntax-jsx": "^7.16.7",
+        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
         "@rollup/plugin-commonjs": "^21.0.2",
         "@rollup/plugin-node-resolve": "^13.1.3",
         "@rollup/plugin-typescript": "^8.3.1",
@@ -23,9 +28,16 @@
         "@storybook/addon-links": "^6.4.19",
         "@storybook/react": "^6.4.19",
         "@storybook/testing-library": "^0.0.9",
+        "@testing-library/dom": "^7.10.1",
+        "@testing-library/jest-dom": "^5.9.0",
+        "@testing-library/react": "^10.2.1",
+        "@testing-library/user-event": "^11.4.0",
+        "@types/jest": "^27.4.1",
         "@types/react": "^17.0.40",
         "@types/styled-components": "^5.1.24",
         "babel-loader": "^8.2.3",
+        "jest": "^27.5.1",
+        "jsdom": "^16.2.2",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-is": "^16.13.1",
