--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
         "rollup-plugin-watch": "^1.0.1",
         "styled-components": "^5.3.3",
         "typescript": "^4.2.2"
+    },
+    "dependencies": {
+        "csstype": "^3.0.11"
     }
 }
