--- a/demo/package.json
+++ b/demo/package.json
@@ -13,7 +13,8 @@
     "alias": {
       "react": "../node_modules/react",
       "react-dom": "../node_modules/react-dom/profiling",
-      "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
+      "scheduler/tracing": "../node_modules/scheduler/tracing-profiling",
+      "contactless":"./../dist/cjs"
     },
     "devDependencies": {
       "@types/react": "^16.9.11",
