--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
         "jsx": "react",
         "module": "ESNext",
         "declaration": true,
-        "declarationDir": "types",
         "sourceMap": true,
         "outDir": "dist",
         "moduleResolution": "node",
@@ -17,6 +16,7 @@
     "exclude": [
         "dist",
         "node_modules",
+        "demo",
         "src/**/*.test.tsx",
         "src/**/*.stories.tsx"
     ]
