--- a/package.json
+++ b/package.json
@@ -45,10 +45,10 @@
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-watch": "^1.0.1",
-        "styled-components": "^5.3.3",
         "typescript": "^4.2.2"
     },
     "dependencies": {
-        "csstype": "^3.0.11"
+        "csstype": "^3.0.11",
+        "styled-components": "^5.3.5"
     }
 }
