--- a/demo/package.json
+++ b/demo/package.json
@@ -14,7 +14,7 @@
       "react": "../node_modules/react",
       "react-dom": "../node_modules/react-dom/profiling",
       "scheduler/tracing": "../node_modules/scheduler/tracing-profiling",
-      "contactless":"./../dist/cjs"
+      "contactless":"../."
     },
     "devDependencies": {
       "@types/react": "^16.9.11",
