npm scripts update

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "start": "rollup -c --watch",
         "storybook": "start-storybook -p 6006",
         "build-storybook": "build-storybook",
-        "publish": "npm run build && np"
+        "deploy": "npm run build && np"
     },
     "author": "Yunis Huseynzade",
     "license": "ISC",
